# roomba_sensor_network

./: .gitignore  LICENSE  README.md  debug.txt
anomaly_fusion/src/: test.py  test_spiral.py
doc/: multi-robot.py
localization_artrack/marker_controller/: CMakeLists.txt  README.md  package.xml
localization_artrack/marker_controller/launch/: marker_positions.launch  marker_positions_dragonfly.launch
localization_artrack/marker_controller/msg/: TargetPoses.msg
localization_artrack/marker_controller/scripts/: pose_remap.py
physical_roomba/: CMakeLists.txt  package.xml
physical_roomba/launch/: camera.launch  keyboard_teleop.launch  robotic_network.launch  roomba.launch  roomba_driver.launch  roomba_high_control.launch
roomba_comm/: CMakeLists.txt  package.xml
roomba_comm/msg/: Particle.msg  PointR.msg  SensedValue.msg
roomba_sensor/: CMakeLists.txt  TODO  package.xml  setup.py
roomba_sensor/launch/: cam.launch
roomba_sensor/scripts/: baseline_control.py  baseline_navigation.py  dynamic_anomaly.py  log_anomaly.py  particle_drawer.py  particle_drawer2.py  roomba_control.py  roomba_navigation.py
turtlebot_ds/: CMakeLists.txt  package.xml
turtlebot_ds/cmake/: turtlebot_gazeboConfig.cmake
turtlebot_ds/launch/: anomaly_gazebo.launch  baseline_simulation.launch  robot1_nav.launch  robot2_nav.launch  roomba_simulation.launch  single_robot.launch  teleop.launch  turtlebot_multi_world.launch
turtlebot_ds/maps/: barracs.pgm  barracs.yaml
turtlebot_ds/robots/: kobukids.urdf.xacro
turtlebot_ds/sensors/: _camera.urdf.xacro  hokuyo_lx30_laser.gazebo.xacro  (+1 more)
(+69 files in other folders)
