<?xml version="1.0"?>
<package>
  <name>marker_controller</name>
  <version>0.0.0</version>
  <description>The marker_controller package</description>

  <maintainer email="ramonmelo@todo.todo">ramonmelo</maintainer>

  <license>TODO</license>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
